working game, complete 2 secenes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="./src/game.js"></script>
     <script src="./src/world.js"></script>
+    <script src="./src/first-scene.js"></script>
     <script src="./src/start.js"></script>
   </body>
 </html>
