--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser-arcade-physics.min.js"></script>
   </head>
   <body>
+    <script src="./src/last-scene.js"></script>
     <script src="./src/game.js"></script>
+    <script src="./src/game 2.js"></script>
     <script src="./src/world.js"></script>
     <script src="./src/first-scene.js"></script>
     <script src="./src/start.js"></script>
